# mlflow-dvc

./: .env  .gitignore  Dockerfile  Makefile  Makefile_OLD  README.md  cli  docker-compose.yml  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
artifacts/1/126abf8bf96a4b138c51d7e6d58b2207/artifacts/: model.dvc
artifacts/1/ad4c7650262540b8b1849fe8b4a034f0/artifacts/: model.dvc
artifacts/1/c073614595de45b380b746ff6b74bab2/artifacts/: model.dvc
data/prepared/: test.csv.dvc  train.csv.dvc
src/: log_production_model.py  prepare.py  train.py
