[tool.poetry]
name = "mlflow-tb"
version = "2021-07"
description = ""
authors = ["mdeboc"]

[tool.poetry.dependencies]
python = "^3.7.9"

importlib-metadata = "^3.8.0"
numpy = "1.19.2"
pandas = "^1.2"
scikit-learn = "0.23.2"
mlflow = "^1.18.0"
dvc = {extras = ["s3"], version = "^2.5.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
